Create raw bear meat item

--- a/common/src/main/resources/assets/astarmobs/lang/en_us.json
+++ b/common/src/main/resources/assets/astarmobs/lang/en_us.json
@@ -1,4 +1,6 @@
 {
+  "category.astarmobs": "Asta Mobs",
   "entity.astarmobs.bear": "Bear",
-  "entity.astarmobs.deer": "Deer"
+  "entity.astarmobs.deer": "Deer",
+  "item.astarmobs.raw_bear_meat": "Raw Bear Meat"
 }
