--- a/common/src/main/resources/assets/astarmobs/lang/es_es.json
+++ b/common/src/main/resources/assets/astarmobs/lang/es_es.json
@@ -2,5 +2,6 @@
   "category.astarmobs": "Asta Mobs",
   "entity.astarmobs.bear": "Oso",
   "entity.astarmobs.deer": "Ciervo",
-  "item.astarmobs.raw_bear_meat": "Carne de oso cruda"
+  "item.astarmobs.raw_bear_meat": "Carne de oso cruda",
+  "item.astarmobs.cooked_bear_meat": "Carne de oso cocinada"
 }
