Add bear spawn egg

--- a/common/src/main/resources/assets/astarmobs/lang/en_us.json
+++ b/common/src/main/resources/assets/astarmobs/lang/en_us.json
@@ -2,6 +2,7 @@
   "category.astarmobs": "Asta Mobs",
   "entity.astarmobs.bear": "Bear",
   "entity.astarmobs.deer": "Deer",
+  "item.astarmobs.bear_spawn_egg": "Bear Spawn Egg",
   "item.astarmobs.raw_bear_meat": "Raw Bear Meat",
   "item.astarmobs.cooked_bear_meat": "Cooked Bear Meat"
 }
