Caribou spawn egg

--- a/common/src/main/resources/assets/astarmobs/lang/en_us.json
+++ b/common/src/main/resources/assets/astarmobs/lang/en_us.json
@@ -8,6 +8,7 @@
   "item.astarmobs.bear_spawn_egg": "Bear Spawn Egg",
   "item.astarmobs.raw_bear_meat": "Raw Bear Meat",
   "item.astarmobs.cooked_bear_meat": "Cooked Bear Meat",
+  "item.astarmobs.caribou_spawn_egg": "Caribou Spawn Egg",
   "item.astarmobs.raw_venison": "Raw Venison",
   "item.astarmobs.cooked_venison": "Cooked Venison"
 }
