--- a/common/src/main/resources/assets/astarmobs/lang/es_es.json
+++ b/common/src/main/resources/assets/astarmobs/lang/es_es.json
@@ -8,6 +8,7 @@
   "item.astarmobs.bear_spawn_egg": "Generar oso",
   "item.astarmobs.raw_bear_meat": "Carne de oso cruda",
   "item.astarmobs.cooked_bear_meat": "Carne de oso cocinada",
+  "item.astarmobs.caribou_spawn_egg": "Generar caribú",
   "item.astarmobs.raw_venison": "Venado crudo",
   "item.astarmobs.cooked_venison": "Venado cocinado"
 }
