Add no malus goals, better metadata

--- a/common/src/main/resources/assets/astarmobs/lang/es_es.json
+++ b/common/src/main/resources/assets/astarmobs/lang/es_es.json
@@ -1,5 +1,5 @@
 {
-  "category.astarmobs": "Asta Mobs",
+  "category.astarmobs": "Astar Mobs",
   "entity.astarmobs.bear": "Oso",
   "entity.astarmobs.deer": "Ciervo",
   "entity.astarmobs.caribou": "Caribú",
