--- a/common/src/main/resources/assets/astarmobs/lang/en_us.json
+++ b/common/src/main/resources/assets/astarmobs/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "category.astarmobs": "Asta Mobs",
+  "category.astarmobs": "Astar Mobs",
   "entity.astarmobs.bear": "Bear",
   "entity.astarmobs.deer": "Deer",
   "entity.astarmobs.caribou": "Caribou",
