Add charred venison

--- a/common/src/main/resources/assets/astarmobs/lang/en_us.json
+++ b/common/src/main/resources/assets/astarmobs/lang/en_us.json
@@ -10,5 +10,6 @@
   "item.astarmobs.cooked_bear_meat": "Cooked Bear Meat",
   "item.astarmobs.caribou_spawn_egg": "Caribou Spawn Egg",
   "item.astarmobs.raw_venison": "Raw Venison",
-  "item.astarmobs.cooked_venison": "Cooked Venison"
+  "item.astarmobs.cooked_venison": "Cooked Venison",
+  "item.astarmobs.charred_venison": "Charred Venison"
 }
