--- a/common/src/main/resources/assets/astarmobs/lang/es_es.json
+++ b/common/src/main/resources/assets/astarmobs/lang/es_es.json
@@ -10,5 +10,6 @@
   "item.astarmobs.cooked_bear_meat": "Carne de oso cocinada",
   "item.astarmobs.caribou_spawn_egg": "Generar caribú",
   "item.astarmobs.raw_venison": "Venado crudo",
-  "item.astarmobs.cooked_venison": "Venado cocinado"
+  "item.astarmobs.cooked_venison": "Venado cocinado",
+  "item.astarmobs.charred_venison": "Venado carbonizado"
 }
