Add deer spawn egg

--- a/common/src/main/resources/assets/astarmobs/lang/en_us.json
+++ b/common/src/main/resources/assets/astarmobs/lang/en_us.json
@@ -5,6 +5,7 @@
   "entity.astarmobs.caribou": "Caribou",
   "subtitles.astarmobs.caribou_ambient": "Caribou grunts",
   "subtitles.astarmobs.caribou_hurt": "Caribou hurt",
+  "item.astarmobs.deer_spawn_egg": "Deer Spawn Egg",
   "item.astarmobs.bear_spawn_egg": "Bear Spawn Egg",
   "item.astarmobs.raw_bear_meat": "Raw Bear Meat",
   "item.astarmobs.cooked_bear_meat": "Cooked Bear Meat",
