--- a/common/src/main/resources/assets/astarmobs/lang/es_es.json
+++ b/common/src/main/resources/assets/astarmobs/lang/es_es.json
@@ -5,6 +5,7 @@
   "entity.astarmobs.caribou": "Caribú",
   "subtitles.astarmobs.caribou_ambient": "Caribú suspira",
   "subtitles.astarmobs.caribou_hurt": "Caribú gruñe",
+  "item.astarmobs.deer_spawn_egg": "Generar ciervo",
   "item.astarmobs.bear_spawn_egg": "Generar oso",
   "item.astarmobs.raw_bear_meat": "Carne de oso cruda",
   "item.astarmobs.cooked_bear_meat": "Carne de oso cocinada",
