Fix Fuel registrar on NeoForge

--- a/common/src/main/resources/assets/astarmobs/lang/en_us.json
+++ b/common/src/main/resources/assets/astarmobs/lang/en_us.json
@@ -17,6 +17,6 @@
   "subtitles.astarmobs.fawn_hurt": "Fawn distress",
   "subtitles.astarmobs.doe_ambient": "Doe bleats",
   "subtitles.astarmobs.doe_hurt": "Doe hurt",
-  "subtitles.astarmobs.buck_ambient": "Buck grunt",
+  "subtitles.astarmobs.buck_ambient": "Buck grunts",
   "subtitles.astarmobs.buck_hurt": "Buck hurt"
 }
